# labby

./: .flake8  .gitignore  .pydocstyle  CHANGELOG.md  Dockerfile  README.md  customer.dockerfile  example.env  pyproject.toml
.github/workflows/: ci.yml  docker.yml  docker_build.yml  docker_push.yml  publish.yml  publish_test.yml  tests.yml
docs/: BUILD_NETWORK_LABS.md  NODE_CONFIGURATION.md
example/: Makefile  labby-client.dockerfile  labby.toml  old_labby.toml
example/bgp-example/: labby_project.yml
example/bgp-example/templates/: cisco_ios.conf.j2  main.j2
example/configs/: r1.txt  r2.txt  r2_boot.txt  r3_boot.txt
example/inventory/: groups.yml  hosts.yml
example/labby_test/: labby_project.toml  labby_project.yml  labby_test.toml
example/labby_test/configs/: r1_boot.txt
example/labby_test/example_inventory/: groups.yml  hosts.yml
example/labby_test/inventory/: groups.yml  hosts.yml
example/labby_test/templates/: bootstrap.j2
example/loki-telegraf/: labby_project.yml
example/loki-telegraf/templates/: arista_eos.conf.j2
example/node_config/: eos-r1.yml  interface.conf.j2  ios-r1.yml
labby/: __init__.py  config.py  connections.py  lock_file.py  main.py  models.py  nodes.py  nornir_module.py  nornir_tasks.py  old_nornir.py  project_data.py  projects.py  provision.py  run.py  settings.py  state_file.py  telemetry.py  templates.py  utils.py
labby/commands/: build.py  common.py  config.py  configuration.py  connect.py  connections.py  create.py  delete.py  get.py  nodes.py  restart.py  run.py  start.py  stop.py  templates.py  update.py
labby/filters/: ipaddr.py
labby/nornir/plugins/inventory/: labby.py
labby/providers/: __init__.py  base.py
labby/providers/gns3/: __init__.py  builders.py  console_provisioner.py  link.py  node.py  project.py  provider.py  provision.py  provisioner.py  reporter.py  template.py  utils.py  z_action.py
labby/templates/: base_config.toml.j2
labby/templates/nodes_bootstrap/: arista_eos.cfg.j2  cisco_ios.cfg.j2  cisco_nxos.cfg.j2
tasks/: __init__.py  check.py  common.py  docker.py  main.py  tests.py
tests/: test_settings.py
tests/data/: default_labby.toml  invalid_labby.toml  labby.toml  labby_env_var.toml
