[tool.poetry]
name = "labby"
version = "0.1.0"
description = "CLI tool to build Network Labs in an automated way"
authors = ["David Flores <davidflores7_8@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
rich = "^10.1.0"
nornir = "^3.0.0"
scrapli = "2020.10.10"
nornir-scrapli = "2020.11.1"
netaddr = "^0.8.0"
Jinja2 = "^2.11.2"
pydantic = {version = "^1.8.1", extras = ["dotenv"]}
gns3fy = {git = "https://github.com/davidban77/gns3fy.git", rev = "v1.0.0"}
PyYAML = "^5.4.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
flake8 = "^3.8.4"
invoke = "^1.6.0"
pylint = "^2.11.1"

[tool.black]
line-length = 120

[tool.pydocstyle]
convention = "google"
inherit = false
match = "(?!__init__).*\\.py"
match-dir = "(?!tests)(?!nornir)[^\\.].*"
add_ignore = "D212,D412"

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
no-docstring-rgx="^(_|test_|Meta$)"

[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
disable = """,
    line-too-long,
    bad-continuation,
    raise-missing-from
    """

[tool.pylint.SIMILARITIES]
# Minimum lines number of a similarity.
min-similarity-lines = 10
# Ignore comments when computing similarities.
ignore-comments = "yes"
# Ignore docstrings when computing similarities.
ignore-docstrings = "yes"
# Ignore imports when computing similarities.
ignore-imports = "yes"

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """

[tool.poetry.scripts]
labby = "labby.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
