[tool.poetry]
name = "labby"
version = "0.1.0"
description = "CLI tool to build Network Labs in an automated way"
authors = ["David Flores <davidflores7_8@hotmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/davidban77/labby"
homepage = "https://github.com/davidban77/labby"
keywords = ["network", "gns3", "python", "cli"]
classifiers = [
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.4.1"
rich = "^12.4.1"
nornir = "^3.3.0"
scrapli = "2020.10.10"
nornir-scrapli = "2020.11.1"
netaddr = "^0.8.0"
Jinja2 = "^3.1.2"
pydantic = {version = "^1.9.1", extras = ["dotenv"]}
gns3fy = "1.0.0-rc.1"
PyYAML = "^6.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
flake8 = "^4.0.1"
invoke = "^1.7.1"
pylint = "^2.13.9"
bandit = "^1.7.1"
pydocstyle = "^6.1.1"

[tool.bandit]
targets = "./"
recursive = true
exclude_dirs = ["./.venv/",]

[tool.bandit.assert_used]
    skips = ["*/test_*.py"]


[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
                     # the root of the project
)
'''


[tool.pydocstyle]
convention = "google"
inherit = false
match = "(?!__init__).*\\.py"
match-dir = "[^\\.].*"
add_ignore = "D212,D412,D104"

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
no-docstring-rgx="^(_|test_|Meta$)"

[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
disable = """,
    line-too-long,
    bad-continuation,
    too-many-arguments
    """

[tool.pylint.SIMILARITIES]
# Minimum lines number of a similarity.
min-similarity-lines = 20
# Ignore comments when computing similarities.
ignore-comments = "yes"
# Ignore docstrings when computing similarities.
ignore-docstrings = "yes"
# Ignore imports when computing similarities.
ignore-imports = "yes"

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "-vv --doctest-modules"


[tool.poetry.scripts]
labby = "labby.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
